# bmad-auto

./: .bandit  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  MANIFEST.in  README.md  SECURITY.md  module.yaml  pyproject.toml
.agents/skills/bmad-auto-dev/: customize.toml  step-02-plan.md
.agents/skills/bmad-auto-sweep/: automation-mode.md
.agents/skills/bmad-code-review/: automation-mode.md
.agents/skills/bmad-deferred-sweep/: SKILL.md
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yaml  documentation.yaml  feature-request.md
.github/workflows/: ci.yml  release.yml
.trunk/: trunk.yaml
_bmad/: config.toml  module-help.csv
_bmad/bmm/: config.yaml
docs/: FEATURES.md  README.md  ROADMAP.md  adapter-authoring-guide.md  game-engine-mcp-guide.md  game-engine-plugin-guide.md  multiplexer-backends.md  plugin-authoring-guide.md  porting-to-a-new-os.md  setup-guide.md  tea-plugin-guide.md  tui-guide.md  verify-feedback-loop.md
docs/notes/: opencode-api-pins.md
module/: README.md
module/.claude-plugin/: marketplace.json
module/bmad-auto-dev/: step-04-review.md
module/bmad-auto-setup/: SKILL.md
module/bmad-auto-sweep/: SKILL.md
module/tool/: README.md
scripts/: gen_demo.py  gen_screenshots.py  record-demo.sh  release.py  seed_skills.py  sync_version.py
skills/bmad-auto-dev/: step-03-implement.md
skills/bmad-auto-sweep/: migration-mode.md
src/automator/: __init__.py  bmadconfig.py  cli.py  deferredwork.py  devcontract.py  diagnostics.py  engine.py  escalation.py  install.py  model.py  platform_util.py  policy.py  probe.py  process_host.py  runs.py  sanitize.py  sprintstatus.py  statemachine.py  sweep.py  tokens.py  verify.py  workspace.py
src/automator/plugins/: bus.py  (+5 more)
src/bmad_automator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/bmad_loop/: __init__.py  __main__.py  bmadconfig.py  checks.py  cli.py  decisions.py  deferredwork.py  devcontract.py  diagnostics.py  documents.py  engine.py  gates.py  install.py  journal.py  machine.py  model.py  platform_util.py  policy.py  probe.py  process_host.py  resolve.py  runs.py  sanitize.py  settings_schema.py  signals.py  sprintstatus.py  stories.py  stories_engine.py  sweep.py  tokens.py  verify.py  workspace.py
tests/: conftest.py  test_backend_registry.py  test_bmadconfig.py  test_claude_tmux.py  test_cleanup.py  test_cli.py  test_decisions.py  test_deferredwork.py  test_devcontract.py  test_diagnostics.py  test_engine.py  test_engine_plugin.py  test_engine_worktree.py  test_entry_point.py  test_escalation.py  test_external_backends.py  test_generic_tmux.py  test_herdr_backend.py  test_herdr_e2e.py  test_herdr_integration.py  test_herdr_poller.py  test_hook_bus.py  test_hook_script.py  test_install.py  test_journal.py  test_model.py  test_module_skills_sync.py  test_module_tool_sync.py  test_multiplexer.py  test_opencode_http.py  test_opencode_live.py  test_platform_util.py  test_plugin_loader.py  test_plugin_tea.py  test_plugin_trust.py  test_plugin_workflows.py  test_policy.py  test_portability_guard.py  test_probe.py  test_probe_hook.py  (+28 more)
tests/fixtures/: stories.yaml
(+121 files in other folders)
