[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bmad-automator"
version = "0.1.0"
description = "Deterministic ralph-loop orchestrator for the BMAD implementation phase"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
bmad-auto = "automator.cli:main"

[project.optional-dependencies]
tui = ["textual>=8.0,<9", "tomlkit>=0.13", "pyte>=0.8.2"]
dev = ["pytest>=8.0", "ruff>=0.4", "pytest-asyncio>=1.0", "bmad-automator[tui]"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# bmad_auto_hook.py + CLI profiles + the bundled bmad-auto-* skills that
# `bmad-auto init` lays down into a project (skills/** recurses into steps/,
# assets/, scripts/).
"automator.data" = ["profiles/*.toml", "skills/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
# skill assets contain template placeholders that are not valid Python
extend-exclude = [".agents", ".claude", "src/automator/data/skills"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
