[build-system]
requires = ["hatchling>=1.30"]
build-backend = "hatchling.build"

[project]
name = "bmad-loop"
version = "0.8.1"
description = "Deterministic ralph-loop orchestrator for the BMAD implementation phase"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "BMad Code, LLC" }]
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  # win32 liveness needs psutil (no /proc; os.kill(pid,0) is destructive there);
  # without it the TUI shows every run as `?`. Hard dep so no install path misses it.
  "psutil>=7.2.2; sys_platform == 'win32'",
]

[project.scripts]
bmad-loop = "bmad_loop.cli:main"

[project.optional-dependencies]
tui = ["textual>=8.0,<9", "tomlkit>=0.13", "pyte>=0.8.2"]
# macOS opt-in for psutil (identity/force-kill niceties); win32 gets it as a core
# dep above, Linux stays dep-free. `pip install bmad-loop[non-linux]` on macOS.
non-linux = ["psutil>=7.2.2"]

[dependency-groups]
# dev gets tui via `uv sync --all-extras` (groups can't self-reference an extra).
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "pytest-asyncio>=1.0",
  "pytest-rerunfailures>=16.0",
  "pytest-xdist>=3.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bmad_loop"]

[tool.hatch.build.targets.sdist]
# .trunk/tools holds an absolute external symlink (trunk launcher) that breaks
# sdist packing; it is dev tooling and irrelevant to the source distribution.
exclude = ["/.trunk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
# skill assets contain template placeholders that are not valid Python
extend-exclude = [".agents", ".claude", "src/bmad_loop/data/skills"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
